lite: keep search encoding compatible with older Android